[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/actors/objects/big_steely/texture.png" type="Texture" id=1]
[ext_resource path="res://scenes/actors/objects/big_steely/big_steely.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/objects/goomba/body.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=5]
radius = 16.0

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[node name="BigSteely" type="Node2D"]
z_index = -1
script = ExtResource( 2 )

[node name="Steely" type="KinematicBody2D" parent="."]
collision_layer = 32
script = ExtResource( 3 )

[node name="SteelieCollider" type="StaticBody2D" parent="Steely"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShapeSteelie" type="CollisionShape2D" parent="Steely/SteelieCollider"]
shape = SubResource( 5 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Steely"]
shape = SubResource( 1 )

[node name="CollisionShapeStopped" type="CollisionShape2D" parent="Steely"]
shape = SubResource( 2 )
disabled = true

[node name="Area2D" type="Area2D" parent="Steely"]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Steely/Area2D"]
shape = SubResource( 3 )

[node name="PlatformDetector" type="Area2D" parent="Steely"]
collision_layer = 0
collision_mask = 2147483664

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Steely/PlatformDetector"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Steely"]
texture = ExtResource( 1 )

[node name="Check1" type="RayCast2D" parent="Steely"]
position = Vector2( -12, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Check2" type="RayCast2D" parent="Steely"]
position = Vector2( 12, 0 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Steely"]
rect = Rect2( -250, -250, 500, 500 )

[node name="BottomPos" type="Node2D" parent="Steely"]
position = Vector2( 0, 12 )
